<resources>
    <string name="Day">D</string>
    <string name="KCAL">千卡</string>
    <string name="L">L</string>
    <string name="Month">M</string>
    <string name="N_A">N/A</string>
    <string name="Playback_failed">播放失败</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">好的</string>
    <string name="VideoView_error_load">视频资源加载失败</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="Year">Y</string>
    <string name="__arcore_cancel">Cancel</string>
    <string name="__arcore_continue">Continue</string>
    <string name="__arcore_install_app">This application requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_install_feature">This feature requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_installing">Installing Google Play Services for AR…</string>
    <string name="a_cache">a-cache</string>
    <string name="abandon">放弃</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">接受</string>
    <string name="account_choose_del_info">微信、手机号登录将均使用主账号数据，非主账号数据将被删除</string>
    <string name="account_choose_info">该手机号已有运动信息，请选择一个账号作为主账号</string>
    <string name="account_upgrade_error">网络遇到点问题，点击重试...</string>
    <string name="account_upgrade_finished_info">升级已完成，点击确定进入首页</string>
    <string name="account_upgrade_loading">数据升级中，请稍后...</string>
    <string name="account_upgrade_title">乐动力账户升级</string>
    <string name="action_cant_be_completed">The requested action could not be completed.</string>
    <string name="actionbar_add_friend">加好友</string>
    <string name="actionbar_add_group">添加圈子</string>
    <string name="actionbar_add_new">添加</string>
    <string name="actionbar_my_post">我的帖子</string>
    <string name="actionbar_setting">设置</string>
    <string name="actionbar_sign_history">打卡记录</string>
    <string name="activity_continue_time">持续时间</string>
    <string name="activity_start_time">开始时间</string>
    <string name="ad_splash_hotspot">点击跳转详情页或第三方应用 ></string>
    <string name="adactivity_missing">%s was not detected in AndroidManifest.xml!</string>
    <string name="adactivity_no_type">AdActivity launched with no type.</string>
    <string name="add_activity">记录运动</string>
    <string name="add_by_take_photo">拍照</string>
    <string name="add_favorites_failed">收藏失败</string>
    <string name="add_favorites_success">已收藏</string>
    <string name="add_image">添加图片</string>
    <string name="add_label_common_des">普通</string>
    <string name="add_label_food_des">食物</string>
    <string name="add_label_location_des">位置</string>
    <string name="add_label_sport_des">运动</string>
    <string name="add_photo">添加照片</string>
    <string name="adsize_too_big" formatted="false">E103: You requested an Ad larger than the measured ad space. Ad space size: %dx%d, request size: %dx%d</string>
    <string name="aes_seed">!@#$</string>
    <string name="agenda_train">我的训练</string>
    <string name="agenda_type">训练分类</string>
    <string name="ai_course_data_upload_fail">数据上传失败</string>
    <string name="ai_course_empty_video">无视频</string>
    <string name="ai_course_retry">重试</string>
    <string name="ai_course_save_video">已保存</string>
    <string name="ai_course_upload_video">视频同步中...</string>
    <string name="ai_course_upload_video_fail">同步失败</string>
    <string name="ai_delete_video">运动视频已删除</string>
    <string name="ai_more_data">"更多
数据"</string>
    <string name="ai_sport">AI运动</string>
    <string name="ai_sport_all_class">全部课程</string>
    <string name="ai_sport_big_fight_count_time_text">%1$s : %2$s</string>
    <string name="ai_sport_finish_share_energy">消耗（千卡）</string>
    <string name="ai_sport_finish_share_energy_unit">（千卡）</string>
    <string name="ai_sport_finish_share_image_fail">获取图片失败！</string>
    <string name="ai_sport_finish_share_num">有效个数（个）</string>
    <string name="ai_sport_finish_share_num_unit">（个）</string>
    <string name="ai_sport_finish_share_rank">%1$s击败了 %2$s%% 的用户</string>
    <string name="ai_sport_finish_share_rank_net_fail">获取排名失败!</string>
    <string name="ai_sport_finish_share_refresh">%s 更新</string>
    <string name="ai_sport_finish_share_time">运动时长（秒）</string>
    <string name="ai_sport_finish_share_time_unit">（秒）</string>
    <string name="ai_sport_finish_share_total_count">共 %s 次</string>
    <string name="ai_sport_finish_share_total_energy">%s 千卡</string>
    <string name="ai_sport_finish_share_total_time">%s 分钟</string>
    <string name="ai_sport_gudie_crunch_tip">"• 运动中保持下巴与颈部夹角不变。
• 踮起脚尖。
• 腹部持续紧张。"</string>
    <string name="ai_sport_gudie_easy_pushup_tip">"• 挺胸收腹，躯干与地面平行。
• 双手与肩同宽，始终保持腰背挺直，控制肘部紧贴身体两侧。"</string>
    <string name="ai_sport_gudie_highleglift_tip">"• 膝盖与脚尖保持向前，抬腿至略高于髋部。
• 前脚掌着地发力。"</string>
    <string name="ai_sport_gudie_jump_tip">"• 原地站立，双脚并拢，双手放在身体两侧。
• 向上起跳，双腿向外打开，双手在头顶击掌
• 再次起跳，双腿向内合并，双手回到身体两侧。"</string>
    <string name="ai_sport_gudie_ropeskipping_tip">"• 两肩放松，核心收紧，眼看前方。
• 两脚略微分开，上臂夹紧，自然呼吸。
• 膝盖微曲，前脚掌着地。
• 跳起高度适当，腾空时身体处于自然弯曲状态。"</string>
    <string name="ai_sport_gudie_situp_tip">"• 双腿屈膝、脚掌着地，仰卧于地垫上。
• 两手放于耳侧勿十指交叉置于脑后。
• 腹部发力带动上半身完成动作。"</string>
    <string name="ai_sport_gudie_squat_tip">"• 站立时两腿略宽于肩，膝盖与脚尖保持同一方向。
• 下蹲时屈髋屈膝，下蹲至大腿平行于地面。
• 动作全程腰背保持一条直线。"</string>
    <string name="ai_sport_guide_hip_bridge_tip">"• 屈膝躺地，勾住脚尖，脚跟着地。
• 臀部抬起持续紧张。"</string>
    <string name="ai_sport_movement_class">运动课程</string>
    <string name="ai_sport_movement_training">动作训练</string>
    <string name="ai_sport_plank_tip">"• 肘关节弯曲，保持大小臂呈直角，撑于地面上。
• 双腿后伸，双脚尖着地。
• 核心收紧，保持身体呈一条斜线。
• 如出现贴地、撅屁股、跪地等不规范动作，将直接结束。"</string>
    <string name="aimotion_positive_button_tip">等待上传</string>
    <string name="aimotion_upload_exit_tip">确认退出</string>
    <string name="aimotion_upload_fail_title">视频正在上传中</string>
    <string name="aimotion_upload_tips_text">直接结束将不会记录运动视频</string>
    <string name="aisports_all_in_rect">让全身进入人形框中</string>
    <string name="aisports_cancel_permission">您取消了录屏授权</string>
    <string name="aisports_change_place">换个地方试试</string>
    <string name="aisports_device_not_support">暂不支持该设备，敬请期待</string>
    <string name="aisports_dont_move">准备就绪 保持不动</string>
    <string name="aisports_loading_text">加载中</string>
    <string name="aisports_no_video">运动不足，未生成视频</string>
    <string name="aisports_no_video_rejected">您已取消录屏授权，未生成视频</string>
    <string name="aisports_record_dialog_subtitle">放弃屏幕录制, 运动后将无法生成视频哦！</string>
    <string name="aisports_record_dialog_title">提示</string>
    <string name="aisports_record_dont_remind">不再提醒</string>
    <string name="aisports_record_to_grand">去授权</string>
    <string name="aisports_situp_tip">请屈膝平躺，全身进入人形框</string>
    <string name="aisports_stay_horizontal">请将手机横放</string>
    <string name="app_name">@string/app_name_release</string>
    <string name="back">后退</string>
    <string name="cancel">取消</string>
    <string name="clear">清空</string>
    <string name="clear_water_mark">清除贴图</string>
    <string name="close">关闭</string>
    <string name="iconfont_ad_left"></string>
    <string name="iconfont_ad_search"></string>
    <string name="iconfont_back"></string>
    <string name="iconfont_cancel"></string>
    <string name="iconfont_voice"></string>
    <string name="intergrate_setting">联调设置</string>
    <string name="lock_distance_init">0.0</string>
    <string name="lock_speed_init">0.0</string>
    <string name="lock_time_init">00:00:00</string>
    <string name="notification_distance">距离(km)</string>
    <string name="notification_duration">时长</string>
    <string name="notification_pace_unit">min/km</string>
    <string name="refresh">刷新</string>
    <string name="search">搜索</string>
    <string name="setting_address">通讯地址</string>
    <string name="setting_ali_run">运动步数</string>
    <string name="setting_bluetooth">蓝牙</string>
    <string name="setting_camera">相机</string>
    <string name="setting_clipBoard">剪贴板</string>
    <string name="setting_contact">通讯录</string>
    <string name="setting_invoicetitle">发票抬头</string>
    <string name="setting_mainCity">城市</string>
    <string name="setting_record">麦克风</string>
    <string name="setting_taobao_auth">淘宝账户信息</string>
    <string name="setting_title">设置</string>
    <string name="setting_user_location">地理位置</string>
    <string name="setting_write_photos_album">相册</string>
    <string name="share">分享</string>
    <string name="share_qq">QQ</string>
    <string name="share_webo">微博</string>
    <string name="share_wechat_circle">微信朋友圈</string>
    <string name="share_wechat_friend">微信好友</string>
    <string name="switch_to_front_camera">切换到前置摄像头</string>
    <string name="turn_on_beauty">开启美颜</string>
    <string name="turn_on_flash">打开闪光灯</string>
    <string name="voice_search">语音搜索</string>
</resources>