<?xml version="1.0" encoding="utf-8"?>
<com.alipay.mobile.antui.basic.AULinearLayout android:orientation="vertical" android:id="@id/alayout_setting_top_panel" android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:antui="http://schemas.android.com/apk/res-auto">
    <com.alipay.mobile.antui.basic.AUTitleBar android:id="@id/title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:titleText="@string/setting_title" />
    <com.alipay.mobile.antui.basic.AUScrollView android:id="@id/scrview_content_panel" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.alipay.mobile.antui.basic.AULinearLayout android:orientation="vertical" android:id="@id/layout_main_view_panel" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.alipay.mobile.antui.basic.AUTextView android:textSize="13.0dip" android:textColor="@color/AU_COLOR_SUB_CONTENT" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/text_allow_use_my" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginLeft="19.0dip" android:maxLines="1" />
            <com.alipay.mobile.antui.tablelist.AUSingleTitleListItem android:id="@id/user_info_auth" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_user_location" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_user_location" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_record" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_record" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_write_photos_album" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_write_photos_album" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_camera" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_camera" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_address" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_address" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_invoicetitle" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_invoicetitle" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_ali_run" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_ali_run" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_taobao_auth" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_taobao_auth" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_contact" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_contact" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_bluetooth" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_bluetooth" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_mainCity" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_mainCity" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.tablelist.AUSwitchListItem android:id="@id/setting_clipBoard" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/setting_clipBoard" antui:listShowCheck="true" />
            <com.alipay.mobile.antui.basic.AUView android:layout_width="fill_parent" android:layout_height="20.0dip" />
            <com.alipay.mobile.antui.tablelist.AUSingleTitleListItem android:id="@id/setting_integrate" android:layout_width="fill_parent" android:layout_height="wrap_content" antui:listItemType="normal" antui:listLeftText="@string/intergrate_setting" />
        </com.alipay.mobile.antui.basic.AULinearLayout>
    </com.alipay.mobile.antui.basic.AUScrollView>
    <com.alipay.mobile.antui.basic.AULinearLayout android:id="@id/layout_error_view_panel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.alipay.mobile.antui.basic.AUTextView android:textSize="13.0dip" android:textColor="@color/AU_COLOR_SUB_CONTENT" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/text_error" android:layout_width="fill_parent" android:layout_height="fill_parent" android:maxLines="1" />
    </com.alipay.mobile.antui.basic.AULinearLayout>
</com.alipay.mobile.antui.basic.AULinearLayout>