<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aui="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/search_bg" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="@dimen/search_bar_hint_height" android:layout_centerVertical="true" />
    <com.alipay.mobile.antui.iconfont.AUIconView android:id="@id/search_icon" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/search_bar_hint_icon_space_view" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/search" aui:iconfontColor="@color/AU_COLOR_SEARCH_INPUT_ICON" aui:iconfontSize="@dimen/AU_TEXTSIZE3" aui:iconfontUnicode="@string/iconfont_ad_search" />
    <FrameLayout android:layout_gravity="center|left" android:id="@id/searchInputBoxContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/search_bar_hint_icon_space_text" android:layout_toRightOf="@id/search_icon" android:layout_centerVertical="true" android:layout_alignWithParentIfMissing="true">
        <com.alipay.mobile.antui.basic.AUEditText android:textSize="@dimen/AU_TEXTSIZE3" android:id="@id/search_input_box" android:background="@null" android:paddingRight="42.0dip" android:layout_width="fill_parent" android:layout_height="46.0dip" android:singleLine="true" android:textCursorDrawable="@drawable/au_cursor_drawable" />
    </FrameLayout>
    <com.alipay.mobile.antui.iconfont.AUIconView android:layout_gravity="center_vertical" android:id="@id/search_voice_btn" android:paddingLeft="@dimen/search_bar_hint_icon_space_view" android:paddingRight="@dimen/search_bar_hint_icon_space_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="46.0dip" android:layout_alignParentRight="true" android:contentDescription="@string/voice_search" aui:iconfontSize="@dimen/AU_TEXTSIZE3" aui:iconfontUnicode="@string/iconfont_voice" />
    <com.alipay.mobile.antui.iconfont.AUIconView android:id="@id/search_clear_btn" android:paddingLeft="@dimen/search_bar_hint_icon_space_view" android:paddingRight="@dimen/search_bar_hint_icon_space_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="46.0dip" android:layout_alignParentRight="true" android:contentDescription="@string/clear" aui:iconfontSize="@dimen/AU_TEXTSIZE3" aui:iconfontUnicode="@string/iconfont_cancel" />
</merge>