<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#80000000" android:layout_width="fill_parent" android:layout_height="48.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aui="http://schemas.android.com/apk/res-auto">
    <TextView android:gravity="center" android:id="@id/tv_tips" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/clear_water_mark" android:layout_centerVertical="true" />
    <com.alipay.mobile.antui.iconfont.AUIconView android:id="@id/ivBack" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.5999756dip" android:layout_centerVertical="true" android:contentDescription="@string/back" aui:iconfontColor="#ffffffff" aui:iconfontSize="16.0dip" aui:iconfontUnicode="@string/iconfont_back" />
</RelativeLayout>