<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/activity_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_corner_white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="@color/blue" android:gravity="center" android:id="@id/tv_dialog_share_wechatcircle" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/share_wechat_circle" />
        <View android:background="@color/light_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="18.0sp" android:textColor="@color/blue" android:gravity="center" android:id="@id/tv_dialog_share_wechat" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/share_wechat_friend" />
        <View android:background="@color/light_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="18.0sp" android:textColor="@color/blue" android:gravity="center" android:id="@id/tv_dialog_share_weibo" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/share_webo" />
        <View android:background="@color/light_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="18.0sp" android:textColor="@color/blue" android:gravity="center" android:id="@id/tv_dialog_share_qq" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/share_qq" />
    </LinearLayout>
    <TextView android:textSize="18.0sp" android:textColor="@color/blue" android:gravity="center" android:id="@id/tv_dialog_share_cancle" android:background="@drawable/bg_corner_white" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="15.0dip" android:text="@string/cancel" />
</LinearLayout>