<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="64.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_runner_ic" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:src="@mipmap/ic_launcher" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/app_name" android:layout_marginStart="10.0dip" android:layout_alignParentStart="true" />
    <LinearLayout android:orientation="horizontal" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:baselineAligned="false" android:layout_toRightOf="@id/iv_runner_ic" android:layout_centerVertical="true" android:layout_marginStart="5.0dip" android:layout_toEndOf="@id/iv_runner_ic">
        <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="18.0sp" android:textColor="@color/TextGreyMiddleColor" android:id="@id/tv_noti_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lock_time_init" android:layout_centerHorizontal="true" style="@style/NotificationText" />
            <TextView android:textSize="12.0sp" android:textColor="@color/TextGreyMiddleColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/notification_duration" android:layout_below="@id/tv_noti_duration" android:layout_centerHorizontal="true" style="@style/NotificationText" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="18.0sp" android:textColor="@color/TextGreyMiddleColor" android:id="@id/tv_noti_distance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lock_distance_init" android:layout_centerHorizontal="true" style="@style/NotificationText" />
            <TextView android:textSize="12.0sp" android:textColor="@color/TextGreyMiddleColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/notification_distance" android:layout_below="@id/tv_noti_distance" android:layout_centerHorizontal="true" style="@style/NotificationText" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="18.0sp" android:textColor="@color/TextGreyMiddleColor" android:id="@id/tv_noti_speed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lock_speed_init" android:layout_centerHorizontal="true" style="@style/NotificationText" />
            <TextView android:textSize="12.0sp" android:textColor="@color/TextGreyMiddleColor" android:id="@id/tv_noti_speed_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/notification_pace_unit" android:layout_below="@id/tv_noti_speed" android:layout_centerHorizontal="true" style="@style/NotificationText" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>