<?xml version="1.0" encoding="utf-8"?>
<com.alipay.mobile.antui.basic.AURelativeLayout android:id="@id/title_bar_kernel" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aui="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/title_bar_status_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/AU_SPACE6" />
    <com.alipay.mobile.antui.basic.AURelativeLayout android:id="@id/search_bar_layout" android:layout_width="fill_parent" android:layout_height="@dimen/AU_SPACE12" android:layout_below="@id/title_bar_status_bar">
        <com.alipay.mobile.antui.iconfont.AUIconView android:id="@id/search_back_button" android:layout_width="@dimen/AU_SPACE12" android:layout_height="fill_parent" android:contentDescription="@string/back" aui:iconfontSize="@dimen/back_icon_size" aui:iconfontUnicode="@string/iconfont_ad_left" />
        <com.alipay.mobile.antui.basic.AURelativeLayout android:id="@id/search_layout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toLeftOf="@id/search_confirm" android:layout_toRightOf="@id/search_back_button" android:layout_centerVertical="true" android:layout_alignWithParentIfMissing="true">
            <View android:id="@id/search_bg" android:background="@drawable/search_view_input_bg" android:layout_width="fill_parent" android:layout_height="@dimen/search_bar_hint_height" android:layout_centerVertical="true" />
            <com.alipay.mobile.antui.iconfont.AUIconView android:id="@id/search_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/search_bar_hint_icon_space_view" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:labelFor="@id/search_input_box" aui:iconImageSize="@dimen/AU_ICONSIZE2" aui:iconfontColor="@color/AU_COLOR_SEARCH_INPUT_ICON" aui:iconfontSize="@dimen/AU_ICONSIZE2" aui:iconfontUnicode="@string/iconfont_ad_search" />
            <com.alipay.mobile.antui.basic.AUEditText android:textSize="@dimen/AU_TEXTSIZE3" android:layout_gravity="center|left" android:id="@id/search_input_box" android:background="@null" android:paddingRight="42.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/AU_SPACE12" android:layout_marginLeft="@dimen/search_bar_hint_icon_space_text" android:singleLine="true" android:layout_toRightOf="@id/search_icon" android:layout_centerVertical="true" android:layout_alignWithParentIfMissing="true" android:textCursorDrawable="@drawable/au_cursor_drawable" />
            <com.alipay.mobile.antui.iconfont.AUIconView android:id="@id/search_voice_btn" android:paddingLeft="@dimen/search_bar_hint_icon_space_view" android:paddingRight="@dimen/search_bar_hint_icon_space_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:contentDescription="@string/voice_search" aui:iconfontSize="@dimen/AU_TEXTSIZE3" aui:iconfontUnicode="@string/iconfont_voice" />
            <com.alipay.mobile.antui.iconfont.AUIconView android:id="@id/search_clear_btn" android:paddingLeft="@dimen/search_bar_hint_icon_space_view" android:paddingRight="@dimen/search_bar_hint_icon_space_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:contentDescription="@string/clear" aui:iconfontSize="@dimen/AU_TEXTSIZE3" aui:iconfontUnicode="@string/iconfont_cancel" />
        </com.alipay.mobile.antui.basic.AURelativeLayout>
        <com.alipay.mobile.antui.iconfont.AUIconView android:id="@id/search_confirm" android:paddingLeft="@dimen/AU_MARGIN_UNIVERSAL" android:paddingRight="@dimen/AU_MARGIN_UNIVERSAL" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" aui:iconfontSize="@dimen/AU_TEXTSIZE4" aui:iconfontUnicode="@string/search" aui:imagerSize="@dimen/AU_DIVIDER_SPACE1" />
    </com.alipay.mobile.antui.basic.AURelativeLayout>
</com.alipay.mobile.antui.basic.AURelativeLayout>